--- a/file_Output_apex.cls
+++ b/file_Output_apex.cls
@@ -6,7 +6,7 @@ public class Sample_apex {
             accountIds.add(opp.AccountId);
         }
 
-        List<Account> accountsToUpdate = [SELECT Id, Last_Opportunity_Amount__c FROM Account WHERE Id IN :accountIds WITH USER_MODE LIMIT 10];
+        List<Account> accountsToUpdate = [SELECT Id, Last_Opportunity_Amount__c FROM Account WHERE Id IN :accountIds LIMIT 10];
         Map<Id, Decimal> accountIdToAmountMap = new Map<Id, Decimal>();
 
         for (Opportunity opp : opportunities) {
@@ -21,44 +21,48 @@ public class Sample_apex {
             acc.Last_Opportunity_Amount__c = accountIdToAmountMap.get(acc.Id);
         }
 
-        update accountsToUpdate;
+        if(Object_Name.sObjectType.getdescribe().isUpdateable()){
+			update accountsToUpdate;
+		}else{
+			accountsToUpdate.adderror('You do not have permission to update the Object_Name.');
+		}
     }
 
     public static void sampleSOQL() {
         // Sample SOQL Queries
-        Account[] accounts = [SELECT Id, Name FROM Account WHERE CreatedDate = TODAY WITH USER_MODE ];
+        Account[] accounts = [SELECT Id, Name FROM Account WHERE CreatedDate = TODAY];
 
         Contact[] contacts = [SELECT Id, Name FROM Contact 
-                            WHERE AccountId IN :accountIds WITH USER_MODE ];
+                            WHERE AccountId IN :accountIds];
 
         public class AccountController {
             public List<Account> getRecentAccounts() {
-                return [SELECT Id, Name, CreatedDate FROM Account WHERE WITH USER_MODE ORDER BY CreatedDate DESC LIMIT 5];
+                return [SELECT Id, Name, CreatedDate FROM Account WHERE ORDER BY CreatedDate DESC LIMIT 5];
             }
         }
 
-        Account[] accounts = [SELECT Id, Name, (SELECT Id, Name FROM Contacts WHERE id='121') FROM Account WHERE CreatedDate = TODAY WITH USER_MODE ];
+        Account[] accounts = [SELECT Id, Name, (SELECT Id, Name FROM Contacts WHERE id='121') FROM Account WHERE CreatedDate = TODAY];
 
         Account[] accounts = [SELECT Id, Name, CreatedDate
                                 FROM Account
-                                WHERE WITH USER_MODE ORDER BY CreatedDate DESC
+                                WHERE ORDER BY CreatedDate DESC
                                 LIMIT 5];
     }
 
     public static void sampledebugs(){
-//        System.debug('This is a simple debug statement.');
+        System.debug('This is a simple debug statement.');
 
         Integer i = 5;
-//        System.debug('The value of i is: ' + i);
+        System.debug('The value of i is: ' + i);
 
-        List<Account> accounts = [SELECT Id, Name FROM Account WITH USER_MODE LIMIT 5];
-//        System.debug('Account records: ' + accounts);
+        List<Account> accounts = [SELECT Id, Name FROM Account LIMIT 5];
+        System.debug('Account records: ' + accounts);
 
         try {
             // some code that could throw an exception
-//            SYSTEM.DEBUG('Some Code is Will be here');
+            SYSTEM.DEBUG('Some Code is Will be here');
         } catch (Exception e) {
-//            System.debug('An error occurred: ' + e.getMessage());
+            System.debug('An error occurred: ' + e.getMessage());
         }
     }
 
@@ -69,9 +73,25 @@ public class Sample_apex {
         List<Lead> LeadUpsert = new List<Lead>();
 
         // Sample DML
-        insert AccountInsert;
-        update CaseUpdate;
-        delete OppDelete;
-        upsert  LeadUpsert;
+        if(Object_Name.sObjectType.getdescribe().isCreateable()){
+			insert AccountInsert;
+		}else{
+			AccountInsert.adderror('You do not have permission to create a new Object_Name.');
+		}
+        if(Object_Name.sObjectType.getdescribe().isUpdateable()){
+			update CaseUpdate;
+		}else{
+			CaseUpdate.adderror('You do not have permission to update the Object_Name.');
+		}
+        if(Object_Name.sObjectType.getdescribe().isDeleteable()){
+			delete OppDelete;
+		}else{
+			OppDelete.adderror('You do not have permission to delete the Object_Name.');
+		}
+        if(Object_Name.sObjectType.getdescribe().isCreateable() && Object_Name.sObjectType.getdescribe().isUpdateable()){
+			upsert  LeadUpsert;
+		}else{
+			 LeadUpsert.adderror('You do not have permission to upsert the Object_Name.');
+		}
     }
 }
